<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.fragments.SettingsFragment">


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_blue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="85dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hello"
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello" />

            <TextView
                android:id="@+id/person_name"
                style="@style/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Lonnie Murphy" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <TextView
            android:id="@+id/change_password"
            style="@style/settings_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_right"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/change_password" />

        <TextView
            android:id="@+id/support"
            style="@style/settings_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_right"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/support" />

        <TextView
            android:id="@+id/about"
            style="@style/settings_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_right"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/about" />

        <TextView
            android:id="@+id/rate_us"
            style="@style/settings_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_right"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/rate_us" />

        <TextView
            android:id="@+id/share"
            style="@style/settings_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_right"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/share" />

        <TextView
            android:id="@+id/sing_out"
            style="@style/settings_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_right"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/sign_out" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>