<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/login_tv"
        style="@style/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_with_google_btn"
        style="@style/login_with_smth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        app:icon="@drawable/google_icon"
        app:iconTint="@null"
        android:paddingEnd="30dp"
        app:iconGravity="textStart"
        app:iconPadding="15dp"
        android:paddingVertical="12dp"
        android:text="@string/login_with_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_with_facebook_btn"
        style="@style/login_with_smth"
        android:layout_width="0dp"
        app:iconPadding="15dp"
        app:iconTint="@null"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/facebook_icon"
        app:iconGravity="textStart"
        android:paddingVertical="12dp"
        android:text="@string/login_with_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_with_google_btn" />

    <TextView
        android:id="@+id/or"
        style="@style/or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_with_facebook_btn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_adress_layout"
        style="@style/information_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:hint="@string/your_email_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/information_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:passwordToggleTint="@color/primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_adress_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPassword"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:hint="@string/your_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        style="@style/conf_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="12dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_layout" />


    <TextView
        android:id="@+id/forgot_password_tv"
        style="@style/forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

    <TextView
        android:id="@+id/by_continuing_tv"
        style="@style/by_continuing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="3dp"
        android:text="@string/by_continuing"
        app:layout_constraintBottom_toBottomOf="@id/terms_and_conditions_tv"
        app:layout_constraintEnd_toStartOf="@id/terms_and_conditions_tv"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_tv" />


    <TextView
        android:id="@+id/terms_and_conditions_tv"
        style="@style/terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/terms_and_conditions"
        app:layout_constraintBottom_toBottomOf="@id/by_continuing_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/by_continuing_tv"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>