<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    tools:context=".ui.main.fragments.LoginOrSignUpFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="80dp"
        android:id="@+id/viewPager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="300dp"/>

    <me.relex.circleindicator.CircleIndicator3
        app:layout_constraintTop_toBottomOf="@id/viewPager"
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/welcome_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicator">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                style="@style/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_or_sign_up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/to_take_quiz"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_welcome_login"
                style="@style/conf_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:paddingVertical="12dp"
                android:text="@string/login"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_welcome_create_account"
                style="@style/conf_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:paddingVertical="12dp"
                android:text="@string/create_an_account"
                android:textAllCaps="false" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>