<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".NewPasswordFragment">

    <TextView
        android:id="@+id/new_password_tv"
        style="@style/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/must_be_different_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:text="@string/must_be_different"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_2_layout"
        style="@style/information_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:passwordToggleTint="@color/primary_blue"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/must_be_different_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:hint="@string/new_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirm_layout"
        style="@style/information_editText"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/primary_blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_2_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="12dp"
        android:layout_marginStart="16dp"
        android:id="@+id/reset_password_3_tv"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/conf_button"
        android:text="@string/reset_password"
        app:layout_constraintTop_toBottomOf="@id/password_confirm_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>