<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_blue"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment">

    <TextView
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reset_password"
        style="@style/header"
        android:id="@+id/reset_password_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/we_will_send"
        android:id="@+id/we_will_send_tv"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/reset_password_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"
        android:id="@+id/your_email_adress_2_ed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/information_editText"
        app:layout_constraintTop_toBottomOf="@id/we_will_send_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:hint="@string/your_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
      android:layout_marginTop="190dp"
      app:layout_constraintStart_toStartOf="parent"
      android:paddingVertical="12dp"
      android:id="@+id/reset_password_2_tv"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      style="@style/conf_button"
      android:text="@string/reset_password"
      app:layout_constraintTop_toBottomOf="@id/your_email_adress_2_ed"
      android:layout_width="0dp"
      android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>